tests/compiled/test_missing_name.stderr
error: No name for tag
 --> tests/compiled/test_missing_name.rs:8:5
  |
8 |     #[tag()]
  |     ^
